--- a/src/components/navegador/index.hbs
+++ b/src/components/navegador/index.hbs
@@ -1,4 +1,4 @@
      <ul>
-        <li><a href="">Inicio</a></li>
-        <li><a href="">Productos</a></li>
+        <li><a href="#/">Inicio</a></li>
+        <li><a href="#/productos">Productos</a></li>
     </ul>
